fixed the margins and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@ h1 {
     font-size: 40px;
 }
 
+.card-header-columns{
+    column-count: 4;
+    padding: .75rem 1.25rem;
+    margin-bottom: 0;
+    background-color: rgba(0,0,0,.03);
+    border-bottom: 1px solid rgba(0,0,0,.125);
+}
+
 .flex-container {
     display: flex;
     flex-wrap: wrap;
@@ -59,4 +67,9 @@ h1 {
 button {
     width: 100%;
     margin-bottom: 1rem;
+}
+
+.alert-size {
+    width: 15%;
+    position: relative;
 }
